@@ -1,3 +1,7 @@
+2011/10/29:
+	* Use ... for variadic functions
+	* Remove leading "GetOpt:" from output, since API does that for us.
+
 2011/10/12: (0.05)
 	* Cleanup and fix naming (use LibGetOpt.lua instead of GetOpt.lua)
 	* Rework tokenizing entirely to handle backslashes and quotes
